# einvoice-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  uniffi.toml
.github/: dependabot.yml
.github/workflows/: cargo_publish.yml  pr.yml  release.yml
bindings/kotlin/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/src/test/java/com/schneppe/einvoice/: ValidationTest.java
bindings/kotlin/src/test/resources/: no_customizationid_01.01_comprehensive_test_ubl.xml
examples/: invalid_cii.rs  invalid_ubl.rs
src/: lib.rs
src/cii/: cii_business_rule_validator.rs  cii_model.rs
src/ubl/: ubl_business_rule_validator.rs  ubl_model.rs
tests/: test_suite_runner.rs
tests/inputs/cii/: 01.10a-INVOICE_uncefact.xml  03.06a-INVOICE_uncefact.xml
tests/inputs/ubl/: 01.10a-INVOICE_ubl.xml  03.06a-INVOICE_ubl.xml  04.03a-INVOICE_ubl.xml  Invoice-Max_content.xml
