[package]
name = "einvoice"
version = "0.1.0"
edition = "2021"

[dependencies]
yaserde = { git = "https://github.com/BSchneppe/yaserde.git" , branch = "feat/nested"}
yaserde_derive ={ git = "https://github.com/BSchneppe/yaserde.git" , branch = "feat/nested"}
thiserror = "2.0.11"
rayon = "1.10.0"
uniffi = { version = "0.28.3", features = ["cli"] }
chrono = "0.4.39"
rust_decimal = { version = "1.36.0",features = ["c-repr"] }
lopdf = "=0.34.0"

[dev-dependencies]
rstest = "0.24.0"
xmltree = { version = "0.11.0" ,features = ["attribute-order"]}
regex = "1.11.1"


[build-dependencies]
regex = "1.11.1"

[lib]
crate-type = ["lib","cdylib"]
[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"


